kubernetes/istio/istio_default_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: default-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  # - port:
  #     number: 80
  #     name: http
  #     protocol: HTTP
  #   hosts:
  #   - "k8s-istiosys-albgatew-a1bdabfc72-1162533468.us-west-2.elb.amazonaws.com"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE                          
      credentialName: yanivzl.com-clusterissuer 
    hosts:
    - "k8s-istiosys-albgatew-a1bdabfc72-1162533468.us-west-2.elb.amazonaws.com"
    # - "cats.yanivzl.com"
    # - "jenkins.yanivzl.com"
    # - "grafana.yanivzl.com"
    # - "prometheus.yanivzl.com"
    # - "argocd.yanivzl.com"
    # - "kiali.yanivzl.com"
