kubernetes/istio/istio_virtualservice_application.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: application-virtualservice
  namespace: default
spec:
  hosts:
  - "k8s-istiosys-albgatew-a1bdabfc72-1162533468.us-west-2.elb.amazonaws.com"
  gateways:
  - default-gateway
  http:
  - route:
    - destination:
        host: capitolis-devops-demo-web-app-capitolis-devops-demo-webapp
        port:
          number: 80
    retries:
      attempts: 3
      perTryTimeout: 2s
