kubernetes/istio/istio_virtualservice_argocd.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-virtualservice
  namespace: argocd
spec:
  hosts:
  - "argocd.yanivzl.com"
  gateways:
  - default-ingressgateway
  http:
  - route:
    - destination:
        host: argo-cd-argocd-server
        port:
          number: 80
    retries:
      attempts: 3
      perTryTimeout: 2s
