kubernetes/istio/istio_virtualservices.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: application-virtualservice
  namespace: default
spec:
  hosts:
  - "yanivzl.com"
  gateways:
  - default-ingressgateway
  http:
  - route:
    - destination:
        host: capitolis-devops-demo-webapp
        port:
          number: 80
    retries:
      attempts: 3
      perTryTimeout: 2s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jenkins
  namespace: jenkins
spec:
  hosts:
  - "jenkins.yanivzl.com"
  gateways:
  - default-ingressgateway
  http:
  - match:
    - uri:
        prefix: /v1/orders
    route:
    - destination:
        host: orders-service
        port:
          number: 8080
    retries:
      attempts: 3
      perTryTimeout: 2s
